fix cors render